Fix SQL injection and getLast() compatibility issues from code review
Co-authored-by: ferzik201 <264393717+ferzik201@users.noreply.github.com>